Lavet på dele af delopgave 3